Criado vue application para Admin

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Sistema de ecommerce para processo seletivo da Evnts",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "set NODE_ENV=test && mocha test '/**/*.spec.js'"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,13 @@
   "homepage": "https://github.com/ramonalves/light-lawliet#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
+    "mocha": "^4.0.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
@@ -35,6 +38,9 @@
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "chai-http": "^3.0.0",
+    "nodemon": "^1.12.1",
+    "sinon": "^4.0.2",
+    "sinon-mongoose": "^2.0.2"
   }
 }
