--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ramonalves/light-lawliet#readme",
   "dependencies": {
+    "aws-sdk": "^2.141.0",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
@@ -30,9 +31,12 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
+    "md5": "^2.2.1",
     "mocha": "^4.0.1",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "serve-favicon": "^2.4.5"
