--- a/admin/package.json
+++ b/admin/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.19.1",
     "vue": "^2.3.3",
+    "vue-momentjs": "^0.1.1",
     "vue-router": "^2.3.1",
     "vuex": "^3.0.0"
   },
