--- a/client/package.json
+++ b/client/package.json
@@ -24,18 +24,24 @@
   },
   "homepage": "https://github.com/ramonalves/light-lawliet#readme",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "method-override": "^2.3.10",
+    "moment": "^2.19.1",
     "mongoose": "^4.12.5",
     "morgan": "^1.9.0",
     "pagseguro": "^0.1.0",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^4.4.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
