--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
+    "guid": "0.0.12",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "method-override": "^2.3.10",
